# MaaFramework-Android

./: .gitignore  AGENT.md  CLAUDE.md  IMPLEMENTATION_OVERVIEW.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: maa_project_manifest.json
app/src/main/res/values/: strings.xml
docs/: SESSION_SUMMARY.md
framework/: build.gradle.kts  proguard-rules.pro
framework-ui/: build.gradle.kts  proguard-rules.pro
framework-ui/src/main/java/com/maaframework/android/ui/: MaaFrameworkUi.kt
framework/src/main/: AndroidManifest.xml
framework/src/main/aidl/com/maaframework/android/ipc/: IRootRuntimeService.aidl
framework/src/main/java/com/maaframework/android/: MaaFrameworkAndroid.kt
framework/src/main/java/com/maaframework/android/bridge/: DriverClass.kt  InputControlUtils.java  InputManagerWrapper.java  NativeBridgeLib.java
framework/src/main/java/com/maaframework/android/catalog/: InterfaceCatalogLoader.kt  JsonWithComments.kt  (+1 more)
framework/src/main/native/: CMakeLists.txt  bridge.cpp  bridge.h  bridge_capture.cpp  bridge_capture.h  bridge_frame_buffer.cpp  bridge_frame_buffer.h  bridge_internal.h  bridge_preview.cpp  bridge_preview.h  launcher.c
framework/src/main/res/drawable/: ic_launcher_background.xml
framework/src/main/res/values/: strings.xml  themes.xml
runtime/: README.md
tools/: package_android_runtime.py  prepare_android_runtime.py
tools/android-python-launcher/: python3_main.c
tools/go-runner/: go.mod  go.sum  main.go
tools/python-shims/numpy/: __init__.py
(+49 files in other folders)
